--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+          <a class="btn btn-primary float-left" href="http://hj.toko.im">&larr; Hajar Jahanam</a>
+          <a class="btn btn-primary float-right" href="http://alisuite.igo.space">AliSuite &rarr;</a>
         </div>
       </div>
     </div>
