--- a/index.html
+++ b/index.html
@@ -39,13 +39,10 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="https://muazinasro.github.io/pertama/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="https://muazinasro.github.io/pertama/contact.html">Contact</a>
           </li>
         </ul>
       </div>
