--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
         <hr>
         </looping>
         
-        <!-- Pager -->
+        <pagination>
+          <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-left" href="http://hj.toko.im">&larr; Hajar Jahanam</a>
-          <a class="btn btn-primary float-right" href="http://alisuite.igo.space">AliSuite &rarr;</a>
+          <a class="btn btn-primary float-left" href="[PREV]">&larr; Previous</a>
+          <a class="btn btn-primary float-right" href="[NEXT]">Next &rarr;</a>
         </div>
+          </pagination>
       </div>
     </div>
   </div>
